--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,9 @@
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
-    <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>  </head>
-
+    <%= javascript_pack_tag "application", "data-turbolinks-track": "reload" %>  
+  
+    </head>
   <body>
     <%= yield %>
   </body>
