--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,22 @@
 @import 'bootstrap';
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
  
+footer{
+    background-color: #54BAB9;
+    height: 10vh;
+    color: white;
+    text-align: center;
+    padding: 20px;
+    font-size: 25px;
+    bottom: 0;
+    width: 100%;
+}
+
+.about-us{
+    padding-right: 100px;
+    color: white;
+}
+
+.externalresources{
+    padding-left: 100px;
+    color:white;
+}
