styling changes done

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -2,8 +2,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
 
 
-
-// ___Navbar-Header____
+// ______Navbar-Header_____
 .navbar-back{
     background-color: #54BAB9!important;
 }
