--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -20,3 +20,26 @@ footer{
     padding-left: 100px;
     color:white;
 }
+
+.notfound {
+    position: relative;
+    text-align: center;
+    color: white;
+  }
+  
+
+.centered {
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -70%);
+    border-style: double;
+    border-width: 7px;
+    border-color: #EAE2D4;
+    font-size: 25px;
+    width: 550px;
+  }
+
+h3 {
+    font-size: 45px;
+}
