--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,51 @@
 @import 'bootstrap';
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
- 
+
+.middlebar img {
+  width: 1300px;
+  height: auto;
+  position: relative;
+}
+
+.box {
+  text-align: center;
+}
+
+.title {
+  position: absolute;
+  text-align: center;
+  right: 61%;
+  top: 20%;
+  width: 50%;
+  transform: translate(33%);
+  color: rgb(15, 14, 14);
+  font-weight: bold;
+}
+
+.text {
+  position: absolute;
+  text-align: center;
+  right: 61%;
+  top: 30%;
+  width: 50%;
+  transform: translate(33%);
+  color: rgb(15, 14, 14);
+  background: #f7ecde54;
+  font-weight: bold;
+  opacity: 0;
+  transition: 0.25s;
+  font-size:large;
+}
+.text:hover {
+  opacity: 1;
+}
+.text--blur {
+  backdrop-filter: blur(10px);
+}
+.middlebar p {
+  text-align: center;
+}
+.button {
+  text-align: center;
+}
+
+
