Completed About Us w/styling

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,17 +1,67 @@
 @import 'bootstrap';
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- *
- *= require_tree .
- *= require_self
- */
- 
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Yantramanav&display=swap');
+
+
+
+ // _____"ABOUT US" Styling_____
+
+.aboutus-logo {
+  position: relative;
+  width: 30%;
+  height: 30%;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, 0%)
+}
+
+.aboutus-card {
+  position: relative; 
+  align-items: center; 
+  background-color: #F7ECDE;
+}
+
+//__Formats Member Name/Role Location__
+.aboutus-title {
+  text-align: center;
+  font-size: larger;
+}
+
+//__Formats Member Name Styling__
+#capstone-team-member {
+  font-family: 'Titillium Web', sans-serif;
+}
+
+//__Formats Member Role Styling__
+#capstone-role {
+  font-family: 'Indie Flower', cursive;
+  font-weight: bold;
+}
+
+//__Formats Bio Text__
+.aboutus-text {
+  text-align: justify;
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  padding: 50;
+  font-size: 18.5px;
+  font-family: 'Yantramanav', sans-serif;
+  
+}
+.aboutus-bio-pic {
+  position:relative;
+  width: 100%; 
+  clip-path: circle() ;
+}
+
+.aboutus-GitHub-icon {
+  margin-bottom: 10;
+  margin-right: 10;
+}
+
+.aboutus-LinkedIn-icon {
+  margin-bottom: 10;
+  margin-right: 10;
+}
