--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,7 +1,128 @@
 @import 'bootstrap';
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Yantramanav&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap');
 
- 
-footer{
+
+
+
+// ______Navbar-Header_____
+.navbar-back{
+    background-color: #54BAB9!important;
+}
+.navbar-title {
+    font-family: 'Fredericka the Great', cursive;
+    color: white;
+    font-size: 60px;
+}
+:hover .navbar-title {
+    color: white;
+}
+.collapse-navbar-collapse {
+    background-color: #F7ECDE;
+}
+.nav-link {
+    color: white;
+    font-size:18px
+}
+.nav-link:hover {
+    color: #002B5B;
+}
+.nav-link::after {
+    color: #F7ECDE;
+}
+a {
+    color: white;
+    text-decoration: none;
+}
+.navbar-nav .show > .nav-link, .navbar-nav .nav-link.active {
+    color: #E9DAC1
+}
+
+
+
+// _____External-Resouces_____
+.resource-title {
+    color: black;
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bolder;
+    background-color: white;
+    padding: 3px;
+    text-align: center;
+    opacity: 0.61;
+    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+}
+.sub-title {
+    color: black;
+    font-weight: bolder;
+    font-family: 'Titillium Web', sans-serif;
+    background-color: white;
+    padding: 3px;
+    text-align: center;
+    opacity: 0.61;
+    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+}
+.transportation-logo {
+    background-image: url('https://wallpaperaccess.com/full/5931192.jpg');
+    background-size: 100%!important;
+    width: 100vw;
+    height: 100vh;
+    font-size:24px;
+    background-repeat:no-repeat;
+    font-weight: bold;
+}
+.hotel-logo {
+    background-image: url('https://wallpaperaccess.com/full/1191990.jpg');
+    background-size: 100%!important;
+    width: 100vw;
+    height: 100vh;
+    font-size:24px;
+    background-repeat:no-repeat;
+    font-weight: bold;
+}
+.helpful-logo {
+    background-image: linear-gradient(to top, rgba(245, 246, 252, 0.52), rgba(10, 161, 243, 0.73)), url('https://images.reference.com/reference-production-images/question/aq/role-tour-guide_5ee3912ff215781a.jpg?width=760&height=411&fit=crop');
+    background-size: 100%!important;
+    width: 100vw;
+    height: 100vh;
+    font-size:24px;
+    background-repeat:no-repeat;  
+    font-weight: bold;
+}
+.nav-tabs {
+    --bs-nav-tabs-border-width: 1px;
+    --bs-nav-tabs-border-color: #dee2e6;
+    --bs-nav-tabs-border-radius: 0.375rem;
+    --bs-nav-tabs-link-hover-border-color: #54BAB9 #54BAB9;
+    --bs-nav-tabs-link-active-color: #18978F;
+    --bs-nav-tabs-link-active-bg: #F7ECDE;
+    --bs-nav-tabs-link-active-border-color: #54BAB9 #54BAB9 #54BAB9;
+    border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
+    background-color: #54BAB9;
+    font-weight: bold;
+}
+.mini-header {
+    font-family: 'Yantramanav', sans-serif;
+    font-weight: bolder;
+    color: white
+}
+::marker {
+    unicode-bidi: isolate;
+    font-variant-numeric: tabular-nums;
+    text-transform: none;
+    text-indent: 0px !important;
+    text-align: start !important;
+    text-align-last: start !important;
+    color: white
+}
+.resource-paragraph {
+    font-family: 'Yantramanav', sans-serif;
+    font-weight: bolder;
+}
+
+
+// _____Footer______ 
+footer {
     background-color: #54BAB9;
     height: 10vh;
     color: white;
@@ -12,12 +133,13 @@ footer{
     width: 100%;
 }
 
-.about-us{
+.about-us {
     padding-right: 100px;
     color: white;
 }
 
-.externalresources{
+.externalresources {
     padding-left: 100px;
     color:white;
 }
+
