--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,5 @@
 @import 'bootstrap';
-
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Yantramanav&display=swap');
@@ -24,17 +24,20 @@
 }
 
 //__Formats Member Name/Role Location__
+
 .aboutus-title {
   text-align: center;
   font-size: larger;
 }
 
 //__Formats Member Name Styling__
+
 #capstone-team-member {
   font-family: 'Titillium Web', sans-serif;
 }
 
 //__Formats Member Role Styling__
+
 #capstone-role {
   font-family: 'Indie Flower', cursive;
   font-weight: bold;
@@ -42,6 +45,7 @@
 }
 
 //__Formats Bio Text__
+
 .aboutus-text {
   text-align: justify;
   display: flex;
@@ -50,8 +54,8 @@
   padding: 50;
   font-size: 18.5px;
   font-family: 'Yantramanav', sans-serif;
-  
 }
+
 .aboutus-bio-pic {
   position:relative;
   width: 100%; 
@@ -76,35 +80,116 @@
 }
 .navbar-title {
     font-family: 'Fredericka the Great', cursive;
-    color: #F7ECDE;
-    font-size: 60px
+    color: white;
+    font-size: 60px;
 }
 :hover .navbar-title {
-    color: #F7ECDE;
+    color: white;
 }
 .collapse-navbar-collapse {
     background-color: #F7ECDE;
     font-size: 26px
 }
 .nav-link {
-    color: #F7ECDE;
+     color: white;
     font-size:26px
 }
 .nav-link:hover {
-    color: #F7ECDE;
+    color: #002B5B;
 }
 .nav-link::after {
     color: #F7ECDE;
 }
 a {
-    color: #54BAB9;
+    color: white;
     text-decoration: none;
 }
 .navbar-nav .show > .nav-link, .navbar-nav .nav-link.active {
     color: #E9DAC1
 }
 
-// ______Navbar-Footer_____
+// _____External-Resouces_____
+
+.resource-title {
+    color: black;
+    font-family: 'Titillium Web', sans-serif;
+    font-weight: bolder;
+    background-color: white;
+    padding: 3px;
+    text-align: center;
+    opacity: 0.61;
+    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+}
+.sub-title {
+    color: black;
+    font-weight: bolder;
+    font-family: 'Titillium Web', sans-serif;
+    background-color: white;
+    padding: 3px;
+    text-align: center;
+    opacity: 0.61;
+    transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+}
+.transportation-logo {
+    background-image: url('https://wallpaperaccess.com/full/5931192.jpg');
+    background-size: 100%!important;
+    width: 100vw;
+    height: 100vh;
+    font-size:24px;
+    background-repeat:no-repeat;
+    font-weight: bold;
+}
+.hotel-logo {
+    background-image: url('https://wallpaperaccess.com/full/1191990.jpg');
+    background-size: 100%!important;
+    width: 100vw;
+    height: 100vh;
+    font-size:24px;
+    background-repeat:no-repeat;
+    font-weight: bold;
+}
+.helpful-logo {
+    background-image: linear-gradient(to top, rgba(245, 246, 252, 0.52), rgba(10, 161, 243, 0.73)), url('https://images.reference.com/reference-production-images/question/aq/role-tour-guide_5ee3912ff215781a.jpg?width=760&height=411&fit=crop');
+    background-size: 100%!important;
+    width: 100vw;
+    height: 100vh;
+    font-size:24px;
+    background-repeat:no-repeat;  
+    font-weight: bold;
+}
+.nav-tabs {
+    --bs-nav-tabs-border-width: 1px;
+    --bs-nav-tabs-border-color: #dee2e6;
+    --bs-nav-tabs-border-radius: 0.375rem;
+    --bs-nav-tabs-link-hover-border-color: #54BAB9 #54BAB9;
+    --bs-nav-tabs-link-active-color: #18978F;
+    --bs-nav-tabs-link-active-bg: #F7ECDE;
+    --bs-nav-tabs-link-active-border-color: #54BAB9 #54BAB9 #54BAB9;
+    border-bottom: var(--bs-nav-tabs-border-width) solid var(--bs-nav-tabs-border-color);
+    background-color: #54BAB9;
+    font-weight: bold;
+}
+.mini-header {
+    font-family: 'Yantramanav', sans-serif;
+    font-weight: bolder;
+    color: white
+}
+::marker {
+    unicode-bidi: isolate;
+    font-variant-numeric: tabular-nums;
+    text-transform: none;
+    text-indent: 0px !important;
+    text-align: start !important;
+    text-align-last: start !important;
+    color: white
+}
+.resource-paragraph {
+    font-family: 'Yantramanav', sans-serif;
+    font-weight: bolder;
+}
+
+
+// _____Footer______ 
 
 footer {
     background-color: #54BAB9;
@@ -127,14 +212,14 @@ footer {
     color:white;
 }
 
+//___Not-Found_____
+
 .notfound {
     position: relative;
     text-align: center;
     color: white;
   }
-  
-
-.centered {
+ .centered {
     position: absolute;
     top: 30%;
     left: 50%;
@@ -148,7 +233,10 @@ footer {
 
 h3 {
     font-size: 45px;
+    text-align: center;
 }
+
+// ______LogTrip-Page_____
 
 .logtriptext{
     color: #54BAB9;
@@ -186,11 +274,52 @@ Form{
     padding: 5px;
 }
 
+// ______ShowTripCard_____
+
+.trip-image {
+    height: 300px;
+    width: 400px;
+}
+
+.trip-detail-body {
+    width: 400px;
+    background-color: white;
+}
+
+.showcard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #F7ECDE;
+}
+
+.nameofplace {
+    font-weight: bold;
+    font-size: 20px;
+}
+
+// ______SevenWonders-Page_____
+
+.sevencard {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: white;
+    margin: 15px;
+}
+
+.sevenpic {
+    height: 180px;
+    width: auto;
+}
+
+.sevenwondersbody {
+    background-color: #e4e2e2;
+}
+
 //___Home Page___
 @import url('https://fonts.googleapis.com/css2?family=Alfa+Slab+One&family=Carter+One&family=Gloria+Hallelujah&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Archivo:ital,wght@1,500&display=swap');
-
-
 
 #homepage-img-background {
   background-size: cover;
@@ -201,6 +330,7 @@ Form{
   height: 100%;
   margin-bottom: 100;
 }
+
 .box {
   text-align: center;
   margin-bottom: 70;
@@ -258,7 +388,6 @@ font-family: 'Archivo', sans-serif;
   border: none;
   cursor: pointer;
   border-radius: 5px;
-
 }
 
 .button-text {
@@ -293,7 +422,7 @@ h1 span.spacer {
 }
 
 
-// _______Trip Index_________
+// ________Trip Index_________
 @import url('https://fonts.googleapis.com/css2?family=DynaPuff&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
