Styling updates for application

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -87,12 +87,15 @@
     color: white;
 }
 .collapse-navbar-collapse {
-    background-color: #F7ECDE;
-    font-size: 26px
+    background-color: #E9DAC1;
+    font-size: 26px;
+    font-weight: bold;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 .nav-link {
-     color: white;
-    font-size:26px
+    color: white;
+    font-size:26px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
 .nav-link:hover {
     color: #002B5B;
@@ -112,13 +115,13 @@ a {
 
 .resource-title {
     color: black;
-    font-family: 'Titillium Web', sans-serif;
     font-weight: bolder;
     background-color: white;
     padding: 3px;
     text-align: center;
     opacity: 0.61;
     transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+    font-family: 'Gloria Hallelujah', cursive;
 }
 .sub-title {
     color: black;
@@ -129,6 +132,8 @@ a {
     text-align: center;
     opacity: 0.61;
     transition: background 0.3s, border-radius 0.3s, opacity 0.3s;
+    font-family: 'Roboto', sans-serif;
+    
 }
 .transportation-logo {
     background-image: url('https://wallpaperaccess.com/full/5931192.jpg');
@@ -218,8 +223,10 @@ footer {
     position: relative;
     text-align: center;
     color: white;
+    
   }
- .centered {
+
+  .centered {
     position: absolute;
     top: 30%;
     left: 50%;
@@ -236,11 +243,12 @@ h3 {
     text-align: center;
 }
 
-// ______LogTrip-Page_____
+// ______LogTrip-Page & Edit Page_____
 
 .logtriptext{
     color: #54BAB9;
     text-align: center;
+    font-family: 'Gloria Hallelujah', cursive;
 }
 
 .name-input , .location-input {
@@ -266,12 +274,21 @@ h3 {
 Form{
     background-color: #EAE2D4;
     margin: 30px;
+    padding: 40px;
+    padding-bottom: 175px
 }
 
 .namelocation, .groupinputlabel {
     display: flex;
     flex-direction: row;
     padding: 5px;
+}
+
+.submit-edit-button {
+  background-color: #2B4865;
+  border-color: #002B5B;
+  font-family: 'Gloria Hallelujah', cursive;
+  font-size: 24px;
 }
 
 // ______ShowTripCard_____
@@ -284,6 +301,8 @@ Form{
 .trip-detail-body {
     width: 400px;
     background-color: white;
+    height: 53vh;
+    position: center;
 }
 
 .showcard {
@@ -298,6 +317,38 @@ Form{
     font-size: 20px;
 }
 
+#location-text {
+  font-family: 'Roboto', sans-serif;
+  font-size: 18px;
+}
+
+#show-date-text{
+  font-size: 17px;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+}
+
+#travelbuddies-text {
+    font-size: 17px;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
+}
+
+#comments-text {
+  font-size: 18px;
+  font-family: 'Gloria Hallelujah', cursive;
+}
+
+.show-button{
+font-size: 18px;
+color: white; 
+position: relative; 
+top: 30%;
+right: 6%;
+background-color: #2B4865;
+border-color: #002B5B;
+font-family: 'Gloria Hallelujah', cursive;
+
+
+}
 // ______SevenWonders-Page_____
 
 .sevencard {
@@ -435,7 +486,7 @@ h1 span.spacer {
 
 #index-title-text {
   font-size: 55px;
-  font-family: 'DynaPuff', cursive;
+  font-family: 'Gloria Hallelujah', cursive;
 }
 
 #index-subtitle-text {
@@ -446,7 +497,7 @@ h1 span.spacer {
 // _Index Page Background_
 .body {
   background-color:#F7ECDE;
-  height: 90vh;
+  height: 100vh;
 }
 
 .trip-title {
@@ -478,8 +529,9 @@ h1 span.spacer {
 }
 
 .s-button {
-  background-color: grey;
-  border-color: grey;
+  background-color: #2B4865;
+  border-color: #002B5B;
+  font-family: 'Gloria Hallelujah', cursive;
   padding: 15px 32px;
   margin: 8;
   margin-left: 0%;
@@ -492,7 +544,6 @@ h1 span.spacer {
   align-content:center;
   text-align: center;
   display: flex;
-  font-family: 'BioRhyme', serif;
 }
 
 * {
