--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -305,14 +305,14 @@ Form{
     position: center;
 }
 
-.showcard {
+.show-card {
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #F7ECDE;
 }
 
-.nameofplace {
+.name-of-place {
     font-weight: bold;
     font-size: 20px;
 }
@@ -327,7 +327,7 @@ Form{
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
-#travelbuddies-text {
+#travel-buddies-text {
     font-size: 17px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif
 }
