--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -312,7 +312,9 @@ Form{
 
 .sevenwondersbody {
     background-color: #e4e2e2;
+}
 
+//_________Home-page______
 .middlebar img {
   width: 1300px;
   height: auto;
@@ -360,4 +362,128 @@ Form{
 .button {
   text-align: center;
 }
+
+//_______Sign-up_________
+  
+.sign-up-form {
+ position: absolute;
+ top: 50%;
+ left: 50%;
+ width: 500px;
+ transform: translate(-50%, -50%);
+ background: #18978F;
+ background-repeat: repeat;
+ background-size: cover; 
+ font-size: 20px;
+}
+ .field {
+    font-size: 20px;
+    margin-bottom: 5px;
+    color: rgb(10, 10, 10);
+    input {
+      padding: 0.2rem;
+      font-size: 15px;
+      width: 100%;
+    }
+  }
+
+.actions {
+  font-size: small;
+}
+.header {
+  position: relative; top: 10px;
+  font-family: 'Fredericka the Great', cursive;
+  color: #dee2e6;
+}
+
+.error_message {
+  font-size: 20px;
+}
+
+//_______log-In___________
+
+.log-in-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  transform: translate(-50%, -50%);
+  background: #18978F;
+  background-repeat: repeat;
+  background-size: cover; 
+  
+}
+  .field {
+     font-size: 20px;
+     margin-bottom: 5px;
+     color: rgb(10, 10, 10);
+     input {
+       padding: 0.2rem;
+       font-size: 15px;
+       width: 100%;
+     }
+   }
+ 
+ .actions {
+   font-size: small;
+ }
+
+ .bimage {
+  width: 300px;
+  height: 300px;
+ }
+
+ .header {
+  position: relative; top: 10px;
+  font-family: 'Fredericka the Great', cursive;
+  color: #dee2e6;
+}
+
+.off-screen {
+  position: absolute;
+  down: 10px;
+}
+
+element.style {
+  background-color: black!important;
+}
+
+.remember-me-txt {
+  color: black;
+  font-size: 15px;
+}
+
+
+
+
+//_____Forgot-P________
+
+.reset-pw-form {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  transform: translate(-50%, -50%);
+  background: #18978F;
+  background-repeat: repeat;
+  background-size: cover; 
+}
+  .field {
+     font-size: 20px;
+     margin-bottom: 5px;
+     color: rgb(10, 10, 10);
+     input {
+       padding: 0.2rem;
+       font-size: 15px;
+       width: 100%;
+     }
+   }
+
+
+
+
+
+
+
+
 
