--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,9 +3,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Titillium+Web:wght@700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Anonymous+Pro&family=Yantramanav&display=swap');
-
-
-
+@import url('https://fonts.googleapis.com/css2?family=Archivo:wght@700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Modak&display=swap');
  // _____"ABOUT US" Styling_____
 
 .aboutus-logo {
@@ -493,3 +492,17 @@ h1 span.spacer {
   padding: 0 
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@800&display=swap');                 
+
+.carouselheader {
+  color: #FFFFF0;
+  margin-bottom: 40px;
+  font-family: 'Cinzel', serif;
+}
+
+.carouselsub {
+  color: #FFFFF0;
+  font-size: 25px;
+  margin-top: 20px;
+  font-weight: bolder;
+}
